@@ -1,7 +1,7 @@
 #  File src/library/base/R/eigen.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2015 The R Core Team
+#  Copyright (C) 1995-2016 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -24,7 +24,15 @@ isSymmetric.matrix <- function(object, tol = 100*.Machine$double.eps, ...)
     if(!is.matrix(object)) return(FALSE) ## we test for  symmetric *matrix*
     ## cheap pretest: is it square?
     d <- dim(object)
-    if(d[1L] != d[2L]) return(FALSE)
+    if((n <- d[1L]) != d[2L]) return(FALSE)
+    if(n <= 1L) return(TRUE)
+    ## else: square (n x n) matrix, n >= 2 :
+    ## initial tests, fast for large non-symmetric:
+    if(is.character(all.equal(object[1L, 2L],
+			      object[2L, 1L], tolerance = tol))) return(FALSE)
+    for(i in unique(c(1L, 2L, n-1L, n)))
+	if(is.character(all.equal(object[i, ],
+				  object[, i], tolerance = tol))) return(FALSE)
     test <-
         if(is.complex(object))
             all.equal.numeric(object, Conj(t(object)), tolerance = tol, ...)
